--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,8 +7,17 @@ on:
         required: false
         default: dist
         type: string
+    outputs:
+      results:
+        description: The results of the deployment operation
+        value: ${{ jobs.deploy.outputs.outcome}}
+#    secrets:
+#        some-secret:
+#          required: false
 jobs:
   deploy:
+    outputs: 
+      outcome: ${{ steps.set-result.outputs.step-result }}
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -17,3 +26,5 @@ jobs:
           name: ${{ inputs.artifact-name }}
       - name: Output information
         run: echo "Deploying & Uploading"
+      - name: Set result output
+        run: ech0 "step-result=success" >> $GITHUB_OUTPUT"
