--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Output information
         run: echo "Deploying & Uploading"
       - name: Set result output
-        run: ech0 "step-result=success" >> $GITHUB_OUTPUT"
+        run: echo "step-result=success" >> $GITHUB_OUTPUT"
