--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -16,6 +16,7 @@ on:
 #          required: false
 jobs:
   deploy:
+    id: deploy
     outputs: 
       outcome: ${{ steps.set-result.outputs.step-result }}
     runs-on: ubuntu-latest
